@@ -1,6 +1,9 @@
 JSLintMate
 ==========
 
+* FEATURE: Added support for fallback options files. To use it, set
+  `TM_JSLINTMATE_JSLINT_OPTIONS_FILE` to a list of paths separated by `:`; the
+  first readable options file is used.
 * IMPROVEMENT: Added compact layout for use in TextMate 2 (or in TextMate 1 if
   the window is small enough).
 * IMPROVEMENT: Hid ugly internal URLs when hovering over problem items in
